<resources>
    <string name="app_name">AuralSphere</string>
    <string name="home">Home</string>
    <string name="playlist_cover">playlist cover</string>
    <string name="playlists">Playlists</string>
    <string name="suggested">Suggested</string>
    <string name="discover">Discover</string>
    <string name="about">About</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_icon">search icon</string>
    <string name="what_do_you_want_to_listen">What do you want to listen?</string>
    <string name="close">close</string>
    <string name="track_cover">track cover</string>
    <string name="previous_track">previous track</string>
    <string name="next_track">next track</string>
    <string name="play_pause_or_resume">play, pause or resume</string>
    <string name="history">History</string>
</resources>