<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".presentation.fragment.PlayerFragment">

    <TextView
        android:id="@+id/labelPlayingFromPlaylist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="Playing from playlist"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvPlaylistName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="Chill"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/labelPlayingFromPlaylist" />

    <ImageView
        android:id="@+id/ivBack"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="12dp"
        android:contentDescription="@string/close"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/white" />

    <ImageView
        android:id="@+id/ivTrackCover"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/track_cover"
        android:src="@drawable/ic_launcher_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvPlaylistName" />

    <TextView
        android:id="@+id/tvTrackName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:gravity="center"
        android:text="Track Name Here"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/ivTrackCover" />

    <TextView
        android:id="@+id/tvTrackArtist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:text="Track Artist"
        android:textColor="@color/light_gray"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/tvTrackName" />

    <TextView
        android:id="@+id/tvTimePassed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginBottom="10dp"
        android:text="1:30"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@id/sbTrackProgress"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvTrackDuration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="10dp"
        android:text="3:00"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@id/sbTrackProgress"
        app:layout_constraintEnd_toEndOf="parent" />

    <SeekBar
        android:id="@+id/sbTrackProgress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="75dp"
        android:layout_marginEnd="20dp"
        android:progress="50"
        android:progressBackgroundTint="@color/light_gray"
        android:progressTint="@color/white"
        android:thumbTint="@color/white"
        app:layout_constraintTop_toBottomOf="@id/tvTrackArtist" />

    <LinearLayout
        android:id="@+id/mediaControllerContainer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="25dp"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent">

        <ImageView
            android:id="@+id/btPrevious"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:contentDescription="@string/previous_track"
            android:src="@drawable/ic_previous"
            app:tint="@color/white" />

        <ImageView
            android:id="@+id/btPlayPauseResume"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:contentDescription="@string/play_pause_or_resume"
            android:src="@drawable/ic_play"
            app:tint="@color/white" />

        <ImageView
            android:id="@+id/btNext"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:contentDescription="@string/next_track"
            android:src="@drawable/ic_next"
            app:tint="@color/white" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>