<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".presentation.fragment.HomeFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.30" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:letterSpacing="-0.2"
        android:text="--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------"
        android:textColor="@color/light_gray"
        app:layout_constraintTop_toBottomOf="@id/guideline3" />

    <TextView
        android:id="@+id/labelHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/jost_medium"
        android:text="Mockotify"
        android:textColor="@color/white"
        android:textSize="32sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/labelPlaylists"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/jost_medium"
        android:text="@string/history"
        android:textColor="@color/light_gray"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/labelHome" />

    <HorizontalScrollView
        android:id="@+id/hsvPlaylists"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:scrollbars="none"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/labelPlaylists">

        <LinearLayout
            android:id="@+id/llPlaylistCardsContainer"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="15dp"
            android:orientation="horizontal" />
    </HorizontalScrollView>

    <TextView
        android:id="@+id/labelNothingHere"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="25dp"
        android:fontFamily="@font/jost_regular"
        android:gravity="center_horizontal"
        android:text="There is nothing here."
        android:textColor="@color/light_gray"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/labelPlaylists" />

    <TextView
        android:id="@+id/tvDiscover"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="20dp"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/jost_medium"
        android:gravity="center"
        android:text="@string/discover"
        android:textColor="@color/primary"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/labelNothingHere" />

    <TextView
        android:id="@+id/labelSuggested"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/jost_medium"
        android:text="@string/suggested"
        android:textColor="@color/light_gray"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline3" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvSuggested"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/labelSuggested" />

    <TextView
        android:id="@+id/labelNothingHere2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="25dp"
        android:fontFamily="@font/jost_regular"
        android:gravity="center_horizontal"
        android:text="There is nothing here."
        android:textColor="@color/light_gray"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/labelSuggested" />
</androidx.constraintlayout.widget.ConstraintLayout>